--- a/angular.json
+++ b/angular.json
@@ -89,11 +89,15 @@
             "styles": [
               "src/styles.css",
               "node_modules/material-design-icons/iconfont/material-icons.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css","node_modules/ngx-photo-editor/photo-editor.css"
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css","node_modules/ngx-photo-editor/photo-editor.css",
+              "node_modules/cropperjs/dist/cropper.css"
 
 
             ],
-            "scripts": []
+            "scripts": [  "node_modules/cropperjs/dist/cropper.js",
+            "./node_modules/fabric/dist/fabric.js"
+
+          ]
           }
         }
       }
