--- a/package.json
+++ b/package.json
@@ -22,7 +22,26 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@syncfusion/ej2-angular-base": "^21.2.3",
+    "@syncfusion/ej2-angular-buttons": "^21.2.5",
+    "@syncfusion/ej2-angular-dropdowns": "^21.2.5",
+    "@syncfusion/ej2-angular-filemanager": "^21.2.5",
+    "@syncfusion/ej2-angular-grids": "^21.2.5",
+    "@syncfusion/ej2-angular-image-editor": "^21.2.5",
+    "@syncfusion/ej2-angular-inputs": "^21.2.4",
+    "@syncfusion/ej2-angular-lists": "^21.2.3",
+    "@syncfusion/ej2-angular-navigations": "^21.2.5",
+    "@syncfusion/ej2-angular-popups": "^21.2.4",
+    "@syncfusion/ej2-angular-richtexteditor": "^21.2.5",
+    "@syncfusion/ej2-angular-splitbuttons": "^21.2.5",
+    "@syncfusion/ej2-image-editor": "^21.2.5",
+    "@uppy/image-editor": "^2.1.2",
+    "cropperjs": "^1.5.13",
+    "fabric": "^5.3.0",
     "hammerjs": "^2.0.8",
+    "ngx-image-cropper": "^6.3.4",
+    "ngx-image-editor": "^1.4.1",
+    "ngx-image-viewer": "^1.0.13",
     "ngx-photo-editor": "^0.4.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
