--- a/package.json
+++ b/package.json
@@ -36,14 +36,17 @@
     "@syncfusion/ej2-angular-splitbuttons": "^21.2.5",
     "@syncfusion/ej2-image-editor": "^21.2.5",
     "@uppy/image-editor": "^2.1.2",
+    "angular-image-cropper": "^1.2.0",
+    "bootstrap": "^5.2.3",
     "cropperjs": "^1.5.13",
     "fabric": "^5.3.0",
+    "firebase": "^9.22.0",
     "hammerjs": "^2.0.8",
     "ngx-image-cropper": "^6.3.4",
     "ngx-image-editor": "^1.4.1",
     "ngx-image-viewer": "^1.0.13",
     "ngx-photo-editor": "^0.4.4",
-    "rxjs": "~7.8.0",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
